tests/ui/pattern/static-binding-shadow-16149.stderr
error[E0530]: match bindings cannot shadow statics
  --> $DIR/static-binding-shadow-16149.rs:9:9
   |
LL |     static externalValue: isize;
   |     ---------------------------- the static `externalValue` is defined here
...
LL |         externalValue => true,
   |         ^^^^^^^^^^^^^ cannot be named the same as a static

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0530`.
